# ParticlesLife_cmake

./: .gitignore  CMakeLists.txt  README.md
includes/: Camera.h  Cluster.h  Libs.h  Particle.h  ParticleEditor.h  Sandbox.h  Shader.h  utils.h
resources/shaders/: vertex_shader.vs
src/: Cluster.cpp  Particle.cpp  ParticleEditor.cpp  Sandbox.cpp  main.cpp
